welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:31: error: type yellow is not a member of object java.awt.Color
  setCouleurBrosse(c:Color.yellow)
                           ^FlowerPot:31: error: not found: value c
  setCouleurBrosse(c:Color.yellow)
                   ^FlowerPot:38: error: type red is not a member of object java.awt.Color
  setCouleurBrosse(c:Color.red)
                           ^FlowerPot:38: error: not found: value c
  setCouleurBrosse(c:Color.red)
                   ^FlowerPot:43: error: type cyan is not a member of object java.awt.Color
  setCouleurBrosse(c:Color.cyan)
                           ^FlowerPot:43: error: not found: value c
  setCouleurBrosse(c:Color.cyan)
                   ^FlowerPot:48: error: type orange is not a member of object java.awt.Color
  setCouleurBrosse(c:Color.orange)
                           ^FlowerPot:48: error: not found: value c
  setCouleurBrosse(c:Color.orange)
                   ^FlowerPot:53: error: type pink is not a member of object java.awt.Color
  setCouleurBrosse(c:Color.pink)
                           ^FlowerPot:53: error: not found: value c
  setCouleurBrosse(c:Color.pink)
                   ^FlowerPot:58: error: type green is not a member of object java.awt.Color
  setCouleurBrosse(c:Color.green)
                           ^FlowerPot:58: error: not found: value c
  setCouleurBrosse(c:Color.green)
                   ^FlowerPot:1: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.FlowerPot'
override def run() {
             ^